--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,43 @@
 <div class="main">
+    <div class="nearHeaderContainer">
+        <div class="mainTitle">
+            CRM для агентств недвижимости <br><span>и риэлторов</span>
+        </div>
 
+        <div class="btnContainer">
+            <button class="more">Подробнее</button>
+            <button class="demo">Хочу демо</button>
+            <div>Попробуйте CRM в действии <span>бесплатно 7 дней</span></div>
+        </div>
+
+        <div class="formContainer">
+            <div class="verticalContainer">
+                <div class="vertText">
+                    <p>Листай вниз</p>
+                    <svg>
+                        <use href="#arrowDown"></use>
+                    </svg>
+                </div>
+                <div>
+                    <p class="vertTitle">Если вам некогда читать сайт, ...</p>
+                    <p class="vertSubtitle">оставьте ваши данные. Мы перезвоним и покажем как устроена наша CRM.</p>
+                </div>
+                <form action="#">
+                    <div>
+                        <div>
+                            <p>Ваше имя</p>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <p>Телефон</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button type="submit">Запросить демонстрацию</button>
+                        <div class="licence">Нажимая на кнопку, Вы соглашаетесь с условиями <a href="#">политики конфиденциальности</a></div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
