--- a/src/index.html
+++ b/src/index.html
@@ -18,26 +18,54 @@
                         <use href="#arrowDown"></use>
                     </svg>
                 </div>
-                <div>
+                <div class="recallContainer">
                     <p class="vertTitle">Если вам некогда читать сайт, ...</p>
                     <p class="vertSubtitle">оставьте ваши данные. Мы перезвоним и покажем как устроена наша CRM.</p>
                 </div>
                 <form action="#">
-                    <div>
-                        <div>
+                    <div class="inpContainer">
+                        <div class="nameContainer">
                             <p>Ваше имя</p>
                             <input type="text">
                         </div>
-                        <div>
+                        <div class="telContainer">
                             <p>Телефон</p>
+                            <input type="tel">
                         </div>
                     </div>
-                    <div>
+                    <div class="submitContainer">
                         <button type="submit">Запросить демонстрацию</button>
                         <div class="licence">Нажимая на кнопку, Вы соглашаетесь с условиями <a href="#">политики конфиденциальности</a></div>
                     </div>
                 </form>
             </div>
+        </div>
+    </div>
+
+    <div class="benefitsContainer">
+        <div class="benefitsTitle">
+           <span>Чем сделка отличается</span><br>от обычных CRM систем<br>для риэлторов?
+        </div>
+        <div class="benefitsSubtitle">
+            Сделка включает в себя необходимые функции для менеджеров и руководителей агентств недвижимости, а ещё помогает привлекать больше клиентов, повысить качество сервиса и ….  
+        </div>
+
+        <div class="algoritmContainer">
+            <div class="algoritmLine">
+                <span>умная заявка</span> &#8212; алгоритм для увелич
+            </div>
+
+            <div class="requestContainer">
+                <div class="smartRequest">Умная заявка — алгоритм для увеличения количества клиентов</div>
+                <div class="smartAlgoritm">Разработанный нами алгоритм поможет вашим менеджерам не упускать потенциальные заявки и держать их под контролем</div>
+            </div>
+
+            <ul class="listContainer">
+                <li>Сайт уже интегрирован со Сделкой и готов к работе. Просто загрузите свой логотип</li>
+                <li>Клиент сможет оставить для вас обратную связь по каждому просмотренному объекту. Все пожелания клиента теперь собраны в одном месте</li>
+                <li>Добавляйте новые объекты в кабинет клиента, сортируйте на просмотренные и те, которые только предстоит увидеть клиенту</li>
+                <li>По итогу работы, клиент сможет оставить отзыв о проделанной работе и поставить оценку</li>
+            </ul>
         </div>
     </div>
 </div>
