--- a/src/index.html
+++ b/src/index.html
@@ -965,8 +965,12 @@
 
             <div class="arrowsContainer">
                 <div class="arrowImgContainer">
-                    <img src="./assets/images/tarif/arrowLeft.png" alt="#">
-                    <img src="./assets/images/tarif/arrowRight.png" alt="#">
+                    <button class="tarifArrowLeft">
+                        <img src="./assets/images/tarif/arrowLeft.png" alt="#">
+                    </button>
+                    <button class="tarifArrowRight">
+                        <img src="./assets/images/tarif/arrowRight.png" alt="#">
+                    </button>
                 </div>
 
                 <div class="listContainer">
@@ -1057,6 +1061,50 @@
                     <button>Попробовать</button>
                 </div>
               </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="cta3">
+        <div class="ctaTitle">
+            Начните использовать<br>Cделку, <span>пожалуйста</span>
+        </div>
+
+        <div class="ctaSubtitle">
+            Чем раньше вы наладите бизнес-процессы,<br>тем быстрее увидите рост 
+        </div>
+
+        <button>Попробовать</button>
+    </div>
+
+    <div class="help">
+        <div class="helpTitle">
+            ПОМОГАЕМ АГЕНТСТВАМ<br>И РИЭЛТОРАМ РАСТИ<br><span>ЗА ЭТО НАС ЦЕНЯТ</span>
+        </div>
+
+        <div class="arrowListContainer">
+            <div class="helpImgContainer">
+                <button class="helpArrowLeft">
+                    <img src="./assets/images/tarif/arrowLeft.png" alt="#">
+                </button>
+                <button class="helpArrowRight">
+                    <img src="./assets/images/tarif/arrowRight.png" alt="#">
+                </button>
+            </div>
+
+            <div class="listContainer">
+                Листай вправо
+            </div>
+        </div>
+
+        <div class="swiper helpSwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                
+              </div>
+              <div class="swiper-slide">Slide 2</div>
+              <div class="swiper-slide">Slide 3</div>
+              <div class="swiper-slide">Slide 4</div>
             </div>
         </div>
     </div>
