--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
     </div>
 
     <div class="benefitsContainer">
+        <div class="blueBox"></div>
         <div class="benefitsTitle">
            <span>Чем сделка отличается</span><br>от обычных CRM систем<br>для риэлторов?
         </div>
@@ -51,8 +52,8 @@
         </div>
 
         <div class="algoritmContainer">
-            <div class="algoritmLine">
-                <span>умная заявка</span> &#8212; алгоритм для увелич
+            <div class="marquee">
+                <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для увеличения</span>
             </div>
 
             <div class="requestContainer">
@@ -70,7 +71,7 @@
 
         <div class="siteContainer">
             <div class="siteLine">
-                ваш собственный сайт <span>и кабинет клиента</span>
+                <span class="siteLineSpan">ваш собственный сайт <span>и кабинет клиента</span></span>
             </div>
 
             <div class="requestContainer">
@@ -87,11 +88,19 @@
 
         <div class="businessContainer">
             <div class="businessLine">
-                помощь <span>бизнес аналитика.</span>
+                <span class="businessLineSpan">помощь <span>бизнес аналитика.</span>
                 <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
                 <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
                 <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
-                помощь
+                помощь помощь <span>бизнес аналитика.</span>
+                <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                помощь помощь <span>бизнес аналитика.</span>
+                <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                помощь</span>
             </div>
 
             <div class="requestContainer">
