--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,18 @@
         <div class="btnContainer">
             <button class="more">Подробнее</button>
             <button class="demo">Хочу демо</button>
-            <div>Попробуйте CRM в действии <span>бесплатно 7 дней</span></div>
+            <div class="hiddenText">Попробуйте CRM в действии <span>бесплатно 7 дней</span></div>
         </div>
 
         <div class="formContainer">
+            <div class="vertText">
+                <p>Листай вниз</p>
+                <svg>
+                    <use href="#arrowDown"></use>
+                </svg>
+            </div>
             <div class="verticalContainer">
-                <div class="vertText">
-                    <p>Листай вниз</p>
-                    <svg>
-                        <use href="#arrowDown"></use>
-                    </svg>
-                </div>
+                
                 <div class="recallContainer">
                     <p class="vertTitle">Если вам некогда читать сайт, ...</p>
                     <p class="vertSubtitle">оставьте ваши данные. Мы перезвоним и покажем как устроена наша CRM.</p>
