--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,8 @@
     </div>
 
     <div class="benefitsContainer">
-        <div class="blueBox"></div>
         <div class="benefitsTitle">
-           <span>Чем сделка отличается</span><br>от обычных CRM систем<br>для риэлторов?
+           <span class="orangeSpan">Чем сделка отличается</span><br><span class="blackText1">от обычных CRM систем</span><br><span class="blackText2">для риэлторов?</span>
         </div>
         <div class="benefitsSubtitle">
             Сделка включает в себя необходимые функции для менеджеров и руководителей агентств недвижимости, а ещё помогает привлекать больше клиентов, повысить качество сервиса и ….  
@@ -366,12 +365,12 @@
 
     <div class="cta1">
         <div class="ctaTitle">
-            Протестируйте<br><span>все функции Cделки</span>
+            <span class="ctaWhiteText">Протестируйте</span><br><span class="ctaBlackText">все функции Cделки</span>
         </div>
         <div class="ctaSubtitle">
             7 дней бесплатно
         </div>
-        <button>Попробовать</button>
+        <button class="btnCta1">Попробовать</button>
     </div>
 
     <div class="integration">
