--- a/src/index.html
+++ b/src/index.html
@@ -1496,8 +1496,10 @@
                             <div class="comment__content">Отзыв рыба отзыв рыба отзыв рыба Отзыв рыба отзыв рыба отзыв рыбаОтзыв рыба отзыв рыба отзыв рыба</div>
                         </div>
                     </div>
+                    <!-- rev-main__input--not-auth -->
                     <form class="rev-main__input rev-main__input--auth">
                         <div class="comment__wrapper">
+                            <div class="not-auth"><a href="#">Авторизуйся</a> или отправь отзыв через CRM</div>
                             <div class="comment__name">Константин Стараковский</div>
                             <div class="comment__info">
                                 <span class="comment__info-prof">Менеджер</span> <span class="comment__info-comp">Avito</span>, <span class="comment__info-city">Санкт-Петербург</span>
@@ -1505,6 +1507,7 @@
                         </div>
                         <div class="input-container">
                             <input type="text" name="review" placeholder="Отправь отзыв" class="input-comment">
+                            <input type="text" placeholder="Отправь отзыв после 30 дней использования" class="input-comment disable" disabled>
                             <button type="button" class="button-smile"><svg><use href="#smileIcon"></use></svg></button>
                             <button type="submit" class="input-button"><svg><use href="#arrowRigth"></use></svg></button>
                         </div>
