zhenya-after-kostya

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                 <span class="siteLineSpan">ваш собственный сайт <span>и кабинет клиента</span></span>
             </div>
 
-            <div class="requestContainer">
+            <div class="requestContainer secondLine">
                 <div class="smartRequest">Ваш собственный сайт и кабинет клиента вместо PDF-презентации</div>
                 <div class="smartAlgoritm">Социальная сеть для риэлторов. Рекламируйте свои услуги, презентуйте базу объектов и находите новых клиентов.</div>
             </div>
@@ -1477,8 +1477,8 @@
         </div>
         <div class="our-comand__progress-bar title-wrapper">
             <div class="progress-bar__wrapper">
-                <div class="orange-line">
-                </div>
+                <div class="orange-line"></div>
+                <div class="blue-line"></div>
             </div>
         </div>
     </div>
@@ -1509,9 +1509,16 @@
     </div>
 
     <div class="reviews">
-        <div class="reviews__title title-wrapper mulish72">Отзывы</div>
+        <div class="reviews__title-wrapper">
+            <div class="reviews__title title-wrapper mulish72">Отзывы</div>
+            <div class="switch-button">
+                <input class="switch-button-checkbox" type="checkbox"></input>
+                <span class="switch-button__span">После 30 дней использования</span>
+                <label class="switch-button-label" for=""><span class="switch-button-label-span">Анонимные</span></label>
+            </div>
+        </div>
         <div class="reviews-block page-wrapper">
-            <div class="rev-main">
+            <div class="rev-main comment-left">
                 <div class="sticker-block">Анонимно</div>
                 <div class="rev-main__commets-wrapper">
                     <div class="rev-main__icon"><svg><use href="#notificationIcon"></use></svg>
@@ -1578,7 +1585,7 @@
                 </div>
             </div>
 
-            <div class="rev-main rev-main--green">
+            <div class="rev-main rev-main--green comment-right">
                 <div class="sticker-block-right">30 дней со СДЕЛКОЙ</div>
                 <div class="rev-main__commets-wrapper rev-main__commets-wrapper--green rev-main__commets-wrapper--height">
                     <div class="rev-main__icon"><svg><use href="#notificationIcon"></use></svg>
