--- a/src/index.html
+++ b/src/index.html
@@ -515,7 +515,7 @@
         </div>
 
         <div class="interfaceContainer">
-            <div>
+            <div class="interfaceContainer__imgCont">
                 <img src="./assets/images/more/moreSmollImg.png" alt="#">
             </div>
 
@@ -1478,7 +1478,7 @@
                 </div>
                 <div class="stepsArrowsContainer title-wrapper">
         
-                    <div class="arrowsImgContainer">
+                    <div class="ourComandImg-container">
                         <button class="ourComadArrowRight">
                             <img src="./assets/images/steps/arrowLeftImg.png" alt="#">
                         </button>
