--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
         </div>
 
         <div class="btnContainer">
-            <button class="moreTriggeredBtn">Подробнее</button>
-            <button class="demo">Хочу демо</button>
+            <div class="onlyBtnContainer">
+                <button class="moreTriggeredBtn">Подробнее</button>
+                <button class="demo">Хочу демо</button>
+            </div>
             <div class="hiddenText">Попробуйте CRM в действии <span>бесплатно 7 дней</span></div>
         </div>
 
@@ -791,6 +793,10 @@
             <button class="cta2Btn">Войти бесплатно</button>
         </div>
 
+        <div class="cta2StaticImg">
+            <img src="./assets/images/cta2/cta2Img.png" alt="#">
+        </div>
+
         <div class="ctaRight">
             <div class="img1">
                 <img src="./assets/images/cta2/img1.png" alt="#">
@@ -932,6 +938,30 @@
                         </div>
                     </div>
                     
+                </div>
+            </div>
+
+            <div class="mobileProgressBarContainer">
+                <div class="mobileProgressBar">
+
+                </div>
+
+                <div class="mobileNumbersContainer">
+                    <div class="mobileNumber1">
+                        01
+                    </div>
+                    <div class="mobileNumber2">
+                        02
+                    </div>
+                    <div class="mobileNumber3">
+                        03
+                    </div>
+                    <div class="mobileNumber4">
+                        04
+                    </div>
+                    <div class="mobileNumber5">
+                        05
+                    </div>
                 </div>
             </div>
         </div>
@@ -1380,6 +1410,10 @@
 
 
     <div class="founder">
+        <div class="mobileTitle">
+            проект сделака зародился в <span>2018 году ...</span>
+        </div>
+
         <div class="leftContainer">
             <div class="leftRelativeContainer">
                 <div class="imgContainer">
@@ -1523,7 +1557,10 @@
     
             <button class="cta4Btn">Задать вопрос</button>
         </div>
-        <!-- div -->
+
+        <div class="cta4StaticImg">
+            <img src="./assets/images/cta4/items.png" alt="#">
+        </div>
 
         <div class="cta4ImgContainer">
             <div class="cta4Img1">
