--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,10 @@
             </div>
 
             <div class="requestContainer">
-                <div class="smartRequest">Умная заявка — ваш цифровой РОП</div>
+                <div class="smartRequest"><div><span>Умная заявка</span> — ваш цифровой РОП</div>
+                <img src="./assets/images/benefitsContainer/arrow480.png" alt="#">
+                <img src="./assets/images/benefitsContainer/arrow480.png" alt="#">
+                </div>
                 <div class="smartAlgoritm">Сделка запомнит регламенты компании и будет следить за тем, чтобы агенты не упускали потенциальные заявки и держали под контролем все задачи.</div>
             </div>
 
