--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,15 @@
             </div>
 
             <div class="requestContainer secondLine">
-                <div class="smartRequest">Ваш собственный сайт и кабинет клиента вместо PDF-презентации</div>
+                <div class="smartRequest">
+                    <div>Ваш собственный сайт <span>и кабинет клиента вместо</span> PDF-презентации</div>
+                    <div class="smartArrowContainer">
+                        <img src="./assets/images/benefitsContainer/smartRequestArrow.png" alt="#">
+                        <img src="./assets/images/benefitsContainer/smartRequestArrow.png" alt="#">
+                        <img src="./assets/images/benefitsContainer/smartRequestArrow.png" alt="#">     
+                    </div>
+
+            </div>
                 <div class="smartAlgoritm">Социальная сеть для риэлторов. Рекламируйте свои услуги, презентуйте базу объектов и находите новых клиентов.</div>
             </div>
 
@@ -135,7 +143,12 @@
             </div>
 
             <div class="requestContainer">
-                <div class="smartRequest">Помощь бизнес-аналитика</div>
+                <div class="smartRequest">
+                    <img src="./assets/images/benefitsContainer/oneMoreArrow.png" alt="#">
+                    <img src="./assets/images/benefitsContainer/oneMoreArrow.png" alt="#">
+                    <div>бизнес<span>-аналитик</span></div>
+                    <img src="./assets/images/benefitsContainer/oneMoreArrow.png" alt="#">
+                </div>
                 <div class="smartAlgoritm">После настройки Cделки, вы будете понимать какие шаги необходимо сделать, чтобы компания развивалась.</div>
             </div>
 
@@ -1175,7 +1188,9 @@
                 <div class="slide1">
                     <div class="imgContainer">
                         <a href="#" class="play-button"><svg><use href="#playIcon"></use></svg></a>
-                        <img src="./assets/images/help/circulImg.png" alt="#">
+                        <div>
+                            <img src="./assets/images/help/circulImg.png" alt="#">
+                        </div>
                     </div>
                     <div class="contentContainer">
                         <div class="logoContainer">
