--- a/src/index.html
+++ b/src/index.html
@@ -289,7 +289,7 @@
                         </div>
                     </li>
                     <li class="ml4">Сделка в курсе:</li>
-                    <li>
+                    <li class="notli">
                         <ul>
                             <li>кто разместил объявление - собственник или агент;</li>
                             <li>где еще рекламируется этот объект;</li>
@@ -415,7 +415,7 @@
 
                 <ul>
                     <li class="ml4">Финансы. Данные для ТОП-менеджера:</li>
-                    <li>
+                    <li class="notli">
                         <ul class="ml5">
                             <li>Актуальный и полный финансовый анализ компании;</li>
                             <li>Контроль доходов и расходов;</li>
@@ -424,7 +424,7 @@
                         </ul>
                     </li>
                     <li class="ml4">Портфель контрактов. Агентские договоры и брони:</li>
-                    <li>
+                    <li class="notli">
                         <ul class="ml5">
                             <li>Просматривайте все контракты компании, отдела или риэлтора - по каким услугам заключены
                                 контракты, на какой стадии они находятся;</li>
@@ -446,7 +446,7 @@
 
                 <ul>
                     <li class="ml4">Контроль:</li>
-                    <li>
+                    <li class="notli">
                         <ul class="ml5">
                             <li>Выставляйте план продаж для отдела или сотрудника;</li>
                             <li>Получайте детальную финансовую сводку о работе каждого отдела или сотрудника;</li>
@@ -2171,40 +2171,42 @@
             <div class="contactsContainer">
                 <div class="contacts">
                     <a href="tel:88001113322">8 800 111 33 22</a>
-                    <a href="#">sales@sdelka-crm.ru</p>
-                        <a href="#">Telegram</p>
+                    <a href="#">sales@sdelka-crm.ru</a>
+                        <a href="#">Telegram</a>
                 </div>
 
                 <button>Задать вопрос в чате</button>
             </div>
         </div>
 
-        <div class="adres">
-            Санкт-Петербург г, ул Фурштатская, д. 28, литера А, помещ. 20-Н Р.М. №1
-        </div>
-
-        <div class="socialNetworkContainer">
-            <div class="socialTitle">
-                <p class="textTitle">Давайте дружить в соцсетях</p>
-                <p class="textSubtitle">Делимся знаниями и новостями в сфере недвижимости и маркетинге:</p>
+        <div>
+            <div class="adres">
+                Санкт-Петербург г, ул Фурштатская, д. 28, литера А, помещ. 20-Н Р.М. №1
             </div>
-
-            <div class="btnContainer">
-                <button>
-                    <svg>
-                        <use href="#tgIco"></use>
-                    </svg>
-                </button>
-                <button>
-                    <svg>
-                        <use href="#vkIco"></use>
-                    </svg>
-                </button>
-                <button>
-                    <svg>
-                        <use href="#youtube"></use>
-                    </svg>
-                </button>
+    
+            <div class="socialNetworkContainer">
+                <div class="socialTitle">
+                    <p class="textTitle">Давайте дружить в соцсетях</p>
+                    <p class="textSubtitle">Делимся знаниями и новостями в сфере недвижимости и маркетинге:</p>
+                </div>
+    
+                <div class="btnContainer">
+                    <button>
+                        <svg>
+                            <use href="#tgIco"></use>
+                        </svg>
+                    </button>
+                    <button>
+                        <svg>
+                            <use href="#vkIco"></use>
+                        </svg>
+                    </button>
+                    <button>
+                        <svg>
+                            <use href="#youtube"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
