--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
                 <div class="smartRequest">
                     <img src="./assets/images/benefitsContainer/oneMoreArrow.png" alt="#">
                     <img src="./assets/images/benefitsContainer/oneMoreArrow.png" alt="#">
-                    <div>бизнес<span>-аналитик</span></div>
+                    <div>Бизнес<span>-аналитик</span></div>
                     <img src="./assets/images/benefitsContainer/oneMoreArrow.png" alt="#">
                 </div>
                 <div class="smartAlgoritm">После настройки Cделки, вы будете понимать какие шаги необходимо сделать,
@@ -537,13 +537,23 @@
         </div> -->
 
         <div class="wrapper">
-            <ul>
+            <div class="swiper loopSwiper">
+            <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
+            <div class="swiper-slide"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
+            <div class="swiper-slide"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
+            <div class="swiper-slide"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
+            <div class="swiper-slide"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
+            </div>
+            <div class="swiper-pagination"></div>
+            </div>
+            <!-- <ul>
                 <li><img src="./assets/images/integration/avitoLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/cianLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/domclickLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/youlaLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/nedvijLogo.png" alt="#"></li>
-            </ul>
+            </ul> -->
         </div>
 
 
@@ -676,15 +686,17 @@
                         риэлторский бизнес и говорят с вами на одном языке. </li>
                     <li>
                         <p>На связи ПН-СБ с 8:00 до 18:00 по московскому времени.</p>
-                        <span>
+                        <span class="notice">
                             ?
                         </span>
+                        <span class="notice-block">Планируем увеличить время работы и выходить на связь с 5:00 утра так же по московскому времени</span>
                     </li>
                     <li>
                         <p class="triggerArrow">Отвечаем в течении 5 минут в WhatsApp/Telegam и по телефону.</p>
-                        <span>
+                        <span class="notice">
                             ?
                         </span>
+                        <span class="notice-block">Планируем увеличить время работы и выходить на связь с 5:00 утра так же по московскому времени</span>
                     </li>
                 </ul>
             </div>
@@ -735,7 +747,7 @@
 
         <div class="stepsArrowsContainer">
             <div class="stepsArrowsText">
-                Внедрим с нуля/сделаем перенос (перенесём данные) из другой CRM и настроим так как нужно именно вам
+                Внедрим с нуля/ перенесем данные из другой CRM и настроим так, как нужно именно вам
             </div>
 
             <div class="arrowsImgContainer">
@@ -1598,6 +1610,11 @@
 
     <div class="our-comand">
         <div class="our-comand__wrapper">
+            <div class="our-comand__mobile-block">
+                <div class="our-comand__title mulish72">Команда сделки</div>
+                <div class="our-comand__desc nunito24">Сделка — это люди вдохновлённые своим продуктом, готовые
+                    помогать, упрощать и улучшать работу риэлторов и агентств</div>
+            </div>
             <div class="swiper our-comand__swiper title-wrapper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide our-comand__slide1-1">
@@ -2179,7 +2196,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="adres__container">
             <div class="adres">
                 Санкт-Петербург г, ул Фурштатская, д. 28, литера А, помещ. 20-Н Р.М. №1
             </div>
