--- a/src/index.html
+++ b/src/index.html
@@ -539,13 +539,27 @@
         <div class="wrapper">
             <div class="swiper loopSwiper">
             <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
-            <div class="swiper-slide"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
-            <div class="swiper-slide"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
-            <div class="swiper-slide"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
-            <div class="swiper-slide"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
             </div>
-            <div class="swiper-pagination"></div>
             </div>
             <!-- <ul>
                 <li><img src="./assets/images/integration/avitoLogo.png" alt="#"></li>
@@ -558,27 +572,66 @@
 
 
         <div class="greenTicketLine" dir="rtl">
-
-            <ul>
+            <div class="swiper loopSwiper2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/smsLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/zadarmaLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/obitLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mangoLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/beelineLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mtsLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/zadarmaLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/obitLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mangoLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/beelineLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mtsLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/smsLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/zadarmaLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/obitLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mangoLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/beelineLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mtsLogo.png" alt="#"></div>
+                </div>
+            </div>
+            <!-- <ul>
                 <li><img src="./assets/images/integration/beelineLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/mtsLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/mangoLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/obitLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/zadarmaLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/smsLogo.png" alt="#"></li>
-            </ul>
+            </ul> -->
 
         </div>
 
         <div class="blueTicketLine">
+            <div class="swiper loopSwiper3">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/jivosuteLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/unisenderLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/sendpulseLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mailchimpLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/scoroLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/jivosuteLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/unisenderLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/sendpulseLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mailchimpLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/scoroLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/jivosuteLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/unisenderLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/sendpulseLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/mailchimpLogo.png" alt="#"></div>
+                    <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/scoroLogo.png" alt="#"></div>
+                </div>
+            </div>
 
-            <ul>
+            <!-- <ul>
                 <li><img src="./assets/images/integration/jivosuteLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/unisenderLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/sendpulseLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/mailchimpLogo.png" alt="#"></li>
                 <li><img src="./assets/images/integration/scoroLogo.png" alt="#"></li>
-            </ul>
+            </ul> -->
         </div>
 
         <div class="blackBlock">
